# observo

./: .gitignore  README.md  pyproject.toml  ruff.toml
examples/fastapi/: main.py
examples/flask/: main.py
observo/: __init__.py
observo/templates/: file_detail.html  index.html  login.html
templates/: 404.html  file_detail.html  index.html
